--- a/gb/23/8/1/n14045590.md
+++ b/gb/23/8/1/n14045590.md
@@ -7,8 +7,7 @@
 </h6>
 <hr>
 	<p>【大纪元2023年08月01日讯】（大纪元记者林宜<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>君报导）当纽约市长亚当斯（Eric Adams）7月31日在打击<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>暴力蓝图的记者会中，称他与校警不合的青少年对话，了解年轻人想要活得“有尊严”，所以要拨款增强青少年就业技能，“预防性”地解决街头枪支暴力问题时，校警维护校园安全的重要性却遭消声。同一天，布碌崙公立178小学就传出有名12岁男孩带着枪械，走进没有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E5%B1%9E%E5%AE%89%E6%A3%80.md#1">金属安检</a>系统的校园中。</p>
-<figure id="14045591" aria-describedby="caption-14045591" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14045591-167868-450x300.jpeg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2023/08/id14045591-167868-450x300.jpeg" alt="（图一）2023年2月11日，纽约市非裔与亚裔社区呼吁纽约市长增加校园警力安置。图中人物由左而右为：纽约同源会George Lee、纽约市公校安全联盟代表Mona Davids、纽约市高中委员会主席王嘉璿（Karen Wang）、纽约同源会创始会长陈慧华、纽约市居民联盟主席臧东慧。" width="500" /></a><figcaption id="caption-14045591" class="wp-caption-text">（图一）2023年2月11日，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>市非裔与亚裔社区呼吁纽约市长增加校园警力安置。图中人物由左而右为：纽约同源会George Lee、纽约市公校安全联盟代表Mona Davids、纽约市高中委员会主席王嘉璿（Karen Wang）、纽约同源会创始会长陈慧华、纽约市居民联盟主席臧东慧。（林宜君／大纪元）</figcaption></figure>
-<p>“纽约市学校安全联盟”（NYC School Safety Coalition）创办人暨双周报《小非洲》（Little Affrica）创刊者莫娜·戴维兹（Mona Davids）受访时表示，她很乐见市长拨款帮助学生学习就业技能，但亚当斯如果真有心要解决校园安全问题，首先应该在每所学校安装<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E5%B1%9E%E5%AE%89%E6%A3%80.md#1">金属安检</a>系统。</p>
+<p>“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>市学校安全联盟”（NYC School Safety Coalition）创办人暨周报《小非洲》（Little Affrica）创刊者莫娜·戴维兹（Mona Davids）受访时表示，她很乐见市长拨款帮助学生学习就业技能，但亚当斯如果真有心要解决校园安全问题，首先应该在每所学校安装<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%87%91%E5%B1%9E%E5%AE%89%E6%A3%80.md#1">金属安检</a>系统。</p>
 <p>“我们需要在小学、初中与高中都加装（金属）安检系统。”戴维兹31日在与《大纪元时报》记者的通话中说，“因为今天每个能进去市政厅参加记者会的，都要经过安检对吧？不可能有人没经过安检就进去市政厅。”</p>
 <p>20年前，非裔的民主党籍纽约市议员戴维斯（James Davis）在市政厅内被对手阿斯丘（Othniel Askew）开枪杀死。此后，市政厅加装了安检系统。</p>
 <p>戴维兹指出，布碌崙公立178小学是有学生跟保安通风报信，才让保安搜出了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9E%AA%E6%94%AF.md#1">枪支</a>。</p>
@@ -22,45 +21,36 @@
 <p>戴维兹与纽约市居民联盟主席臧东慧（Donghui Zang）当时多次合作，在布碌崙、皇后区、曼哈顿等地举办示威集会反对，并多次与威廉姆斯会面，面陈市警局对校园安全的必要性。</p>
 <p>责任编辑：陈玟绮</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928601.md#1">纽约市非裔与华人社区呼吁市长增加校警</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941152.md#1">托运行李发现爆炸装置 美国宾州男子被捕</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947487.md#1">飞机托运行李中发现爆炸装置 宾州男子被捕</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/12/n13994412.md#1">搭机能带什么 四类东西乘客查询最多</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/8/n10285705.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(下)</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/15/n10395165.md#1" target="_blank">【还原史实】谁在对日抗战？谁在借机发展？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14042367.md#1">港作家叹大陆出不了这三人 最欣赏倪匡气节</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040949.md#1">【未解之谜】特异功能大师 李有甫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/17/n14035789.md#1">南希?里根的最佳角色（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/21/n14038991.md#1">中国哲学思想的智慧：虚室生白 吉祥自来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030367.md#1">【古道人生】他为何能从一个贱丐做到水陆提督</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045381.md#1">【新唐人快报】火箭军火速易帅 原司令去哪了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044301.md#1">【菁英论坛】解读2758决议 美夺回一中话语权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045408.md#1">【秦鹏观察】火箭军换将风暴起？习10天3喊反腐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044668.md#1">传火箭军前副司令吴国华自杀 老上司曝内情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044364.md#1">北京彻夜大雨瓢泼 天安门广场及故宫关闭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044294.md#1">中国经济困局 年轻人“买房结婚生子”很难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044708.md#1">《中国好声音》开播2分钟 网民吐槽 评论关闭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044530.md#1">杨紫琼认嫁富商尚?陶德 甜晒合照分享喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044675.md#1">周润发跑步不慎摔倒 自曝肋骨断裂呼吸都会痛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044580.md#1">李玟告别式7/31举行 丈夫不在讣闻名单中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043802.md#1">9项性犯罪指控无罪 影帝凯文史贝西当庭落泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/28/n14043848.md#1">浴室霉菌易诱发过敏 做到5点彻底除霉菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/9/n14031083.md#1">薄荷治头痛、恶心、便秘 效果媲美5种常用药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14043914.md#1">【车评】电星星亮晶晶 2023 Mercedes-Benz EQS 580 4MATIC SUV</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/26/n14041972.md#1">泡茶奉茶品茗 茶道艺术中的自然美学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044026.md#1">今年夏季买房 房价不会变得更便宜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/1/n14045590.htm">终结枪械流入纽约校园 校安组织吁装金属安检</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045590.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
